--- a/scss/pages/_contact.scss
+++ b/scss/pages/_contact.scss
@@ -18,17 +18,15 @@
   &::before {
     content: '';
     inset: 0;
-    position: absolute;
-    opacity: 0.25;
-    background-color: $light;
   }
 
   > * {
     position: relative;
   }
+}
 
-  display: flex;
-  justify-content: center;
+.card {
+  border: none;
 }
 
 @media (min-width: 992px) {
